Clarity Build: fix layout issues with datepicker and grid columns (#2989) http://github.com/vmware/clarity/commit/44be5359413cb6de0eb005735fb2d6617f213b31:

--- a/clr-ui-dark.css
+++ b/clr-ui-dark.css
@@ -8147,7 +8147,8 @@ _:-ms-input-placeholder .progress-block > label,
     border: none; }
   .clr-input-group .clr-input-group-icon-action {
     color: #49afd9;
-    cursor: pointer; }
+    cursor: pointer;
+    margin: 0 0.375rem; }
 
 .clr-form-control-disabled .clr-input-group-icon-action {
   cursor: not-allowed; }
