--- a/clr-ui.css
+++ b/clr-ui.css
@@ -7879,7 +7879,8 @@ _:-ms-input-placeholder .progress-block > label,
     border: none; }
   .clr-input-group .clr-input-group-icon-action {
     color: #0095d3;
-    cursor: pointer; }
+    cursor: pointer;
+    margin: 0 0.375rem; }
 
 .clr-form-control-disabled .clr-input-group-icon-action {
   cursor: not-allowed; }
